--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-
-<app-login></app-login>
-
-<app-head></app-head>
-
-<app-aboutme></app-aboutme>
-
-<app-edu></app-edu>
-
-<app-certifications></app-certifications>
-
-<app-hardnsoft></app-hardnsoft>
-
-<app-xp></app-xp>
-
-<router-outlet></router-outlet>
-
+<div>
+  <router-outlet></router-outlet>
+</div>
