--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div>
-    <p id="text-acercade">{{miPort.acercademi}}</p>
+    <p id="text-acercade">{{miPort.sobre_mi}}</p>
   </div>
   <div>
     <input id="edit-acercade" type="text" style="display:none">
