--- a/src/app/components/head/head.component.html
+++ b/src/app/components/head/head.component.html
@@ -1,14 +1,14 @@
 <div class="card mat-card" id="first-card">
-  <div id="profile-back"><img src="https://wallpapercave.com/wp/wp3121914.jpg">
+  <div id="profile-back"><img [src]="miPort.back_img">
   </div>
   <div id="info" style="padding: 16px;">
     <div id="info-img">
-            <img class="profile-image" [src]="miPort.profileimg" alt="Profile picture">
+            <img class="profile-image" [src]="miPort.profile_img" alt="Profile picture">
                     <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
     </div>
     <div id="info-data">
       <div>
-        <h1>{{miPort.name}}</h1>
+        <h1>{{miPort.nombre}}</h1>
         <div id="info-company">
           {{miPort.ocupation}}
         </div>
@@ -17,14 +17,6 @@
           <br>
         </div>
       </div>
-      <ul id="info-details">
-        <li>
-          <a [href]="miPort.linkuns">
-          <img [src]="miPort.logouns" alt="Logo UNS">
-          <h2>{{miPort.nameuns}}</h2>
-          </a>
-        </li>
-      </ul>
     </div>
     <br>
     <div id="info-actions">
