actualizacion de url de adquisicion de datos

--- a/src/app/components/certifications/certifications.component.css
+++ b/src/app/components/certifications/certifications.component.css
@@ -10,6 +10,11 @@ div  {
 div ul.items-list li div.data-container{
   border: 1px solid rgb(180, 34, 102);
   width: fit-content;
-  border-radius: 4px;
+  box-shadow: 1px 1px 0px rgb(133, 131, 129),
+  2px 2px 1px rgb(133, 131, 129),
+  3px 3px 1px rgb(133, 131, 129),
+  4px 4px 1px rgb(133, 131, 129),
+  5px 5px 1px rgb(133, 131, 129),
+
 }
 
