--- a/src/app/components/certifications/certifications.component.html
+++ b/src/app/components/certifications/certifications.component.html
@@ -23,7 +23,7 @@
             <h4>{{cert.title}}</h4>
             <p><span>{{cert.company}}</span></p>
             <h5>{{cert.isued}} - {{cert.expdate}}</h5>
-            <p>Certificate ID: <em>{{cert.id}}</em></p>
+            <p>Certificate ID: <em>{{cert.certid}}</em></p>
           </div>
         </div>
       </div>
