--- a/src/app/components/edu/edu.component.html
+++ b/src/app/components/edu/edu.component.html
@@ -24,7 +24,7 @@
           <div>
             <h3>{{edu.school}}</h3>
             <p><span>{{edu.title}}</span></p>
-            <h4>{{edu.start}} - {{edu.end}}</h4>
+            <h4>{{edu.fecha_inicio}} - {{edu.fecha_fin}}</h4>
           </div>
         </div>
       </div>
