--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -1,11 +1,13 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Acerca de mi</h2>
-    <div class="btn-edit">
-      <a href="#" class="btn-right">
-      <i class="fa fa-pen"></i></a>
+    <div class="btn-edit" (click)="mostrarEditarAboutMe = !mostrarEditarAboutMe">
+      <i class="fa fa-pen"></i>
     </div>
+  <div class="card mat-card" *ngIf="mostrarEditarAboutMe">
+    <app-editar-aboutme></app-editar-aboutme>
   </div>
+</div>
   <div>
     <p id="text-acercade">{{miPort.sobre_mi}}</p>
   </div>
