--- a/src/app/components/hardnsoft/hardnsoft.component.html
+++ b/src/app/components/hardnsoft/hardnsoft.component.html
@@ -1,7 +1,18 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Hard & Soft Skills</h2>
-    <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
+    <div class="btn-edit" (click)="mostrarAniadirHNS = !mostrarAniadirHNS">
+      <i class="fa fa-plus"></i>
+    </div>
+    <div class="card mat-card" *ngIf="mostrarAniadirHNS">
+      <app-hnsskills></app-hnsskills>
+    </div>
+    <div class="btn-edit" (click)="mostrarBorrar = !mostrarBorrar">
+      <i class="fa fa-trash"></i>
+    </div>
+    <div class="card mat-card" *ngIf="mostrarBorrar">
+      <app-borrarhns></app-borrarhns>
+    </div>
     <ul class="items-list">
       <li *ngFor="let hns of hardnsoftList">
         <div class="data-container">
