--- a/src/app/components/xp/xp.component.css
+++ b/src/app/components/xp/xp.component.css
@@ -3,7 +3,10 @@ body  {
 }
 div  {
   background-color: rgb(255, 242, 248);
+  border-color: rgb(221, 61, 136);
+}
 
 
-  border-color: rgb(180, 34, 102);
+ul{
+  list-style: none;
 }
