--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 
 .mat-card#first-card {
   padding: 0;
+  border-radius: 32px;
 }
 
 div#profile-back {
@@ -17,7 +18,12 @@ div#profile-back {
 
 div#profile-back img {
   width: 100%;
+  height: 350px;
   border-radius: 32px 32px 0 0;
+}
+
+div#info{
+  border-radius: 32px;
 }
 
 .profile-image {
@@ -99,12 +105,11 @@ ul.items-list {
 ul.items-list li {
   display: flex;
   margin: 10px 0;
+
 }
 
 ul.items-list li div.data-container {
   flex-grow: 1;
-  border-color: #0a66c2;
-
 }
 
 ul.items-list li div.data-container a {
