--- a/src/app/components/head/head.component.css
+++ b/src/app/components/head/head.component.css
@@ -22,3 +22,11 @@ div.card.mat-card{
   padding: 10px;
   margin: 5px;
 }
+div div div div div i.fa {
+  width: fit-content;
+  margin-inline-end: auto;
+  padding-right: 0%;
+  position: relative;
+  left: 98%;
+  bottom: 45px;
+}
