--- a/src/app/components/xp/xp.component.html
+++ b/src/app/components/xp/xp.component.html
@@ -1,24 +1,24 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Experiencia</h2>
-  <!--  <div class="btn-edit" (click)="mostrarAniadirXp = !mostrarAniadirXp">
+  <div class="btn-edit" (click)="mostrarAniadirXp = !mostrarAniadirXp">
       <i class="fa fa-plus"></i>
     </div>
     <div class="card mat-card" *ngIf="mostrarAniadirXp">
       <app-xperience></app-xperience>
     </div>
-  </div> -->
+  </div>
   <ul class="items-list">
-    <li *ngFor="let xp of proyectosList">
+    <li *ngFor="let xp of xpList">
       <div class="m-3 data-container">
         <div class="list-info">
-          <h3>{{xp.name}}</h3>
-          <h4>{{xp.description}}</h4>
+          <h3>{{xp.nombreEmpresa}}</h3>
+          <h4>{{xp.puesto}}</h4>
         </div>
       </div>
-      <p *ngFor="let xp2 of xp.techs">
-        {{xp2.name}}-
-      </p>
+        <h4>
+          {{xp.fechaInicio}} - {{xp.fechaFin}}
+        </h4>
     </li>
   </ul>
 </div>
