Arreglo detalles de acerca de mi

--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -23,7 +23,7 @@
   </div>
   <div *ngFor="let about of aboutmeList">
     <div>
-      <p id="text-acercade">{{about.aboutme}}</p>
+      <p id="text-acercade">{{about.about}}</p>
     </div>
     <div>
       <input id="edit-acercade" type="text" style="display:none">
