--- a/src/app/components/borrar/borrarproye/borrarproye.component.html
+++ b/src/app/components/borrar/borrarproye/borrarproye.component.html
@@ -1,14 +1,14 @@
 <form [formGroup]="formBorrar" class="login-form" (ngSubmit)="onSend($event)" >
   <div class="form-group mb-3">
-    <label for="Nombre">Ingrese el nombre del proyecto a eliminar</label>
+    <label for="name">Ingrese el nombre del proyecto a eliminar</label>
     <input
     class="form-control"
-    id="nombre"
-    formControlName="nombre"
-    [ngClass]="{'is-invalid': Nombre?.errors && Nombre?.touched, 'is-valid' : !Nombre?.errors && Nombre?.touched}"
+    id="name"
+    formControlName="name"
+    [ngClass]="{'is-invalid': Name?.errors && Name?.touched, 'is-valid' : !Name?.errors && Name?.touched}"
     >
-    <div *ngIf="Nombre?.errors && Nombre?.touched">
-      <p *ngIf="Nombre?.hasError('required')" class="text-danger">
+    <div *ngIf="Name?.errors && Name?.touched">
+      <p *ngIf="Name?.hasError('required')" class="text-danger">
         Ingrese el proyecto a eliminar
       </p>
     </div>
