--- a/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
+++ b/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
@@ -1,14 +1,13 @@
 <form [formGroup]="formEditar" class="login-form" (ngSubmit)="onSend($event)" >
   <div class="form-group mb-3">
-    <label for="mailactual">Ingrese un mail asociado a la cuenta para actualizar la informacion de contacto </label>
+    <label for="mail">Ingrese un mail asociado a la cuenta para actualizar la informacion de contacto </label>
     <input
     class="form-control"
-    id="mailactual"
-    formControlName="mailactual"
-    [ngClass]="{'is-invalid': MailActual?.errors && MailActual?.touched, 'is-valid' : !MailActual?.errors && MailActual?.touched}"
+    id="mail"
+    [ngClass]="{'is-invalid': Mail?.errors && Mail?.touched, 'is-valid' : !Mail?.errors && Mail?.touched}"
     >
-    <div *ngIf="MailActual?.errors && MailActual?.touched">
-      <p *ngIf="MailActual?.hasError('required')" class="text-danger">
+    <div *ngIf="Mail?.errors && Mail?.touched">
+      <p *ngIf="Mail?.hasError('required')" class="text-danger">
         Ingrese el mail con el que inicio sesion
       </p>
     </div>
@@ -30,15 +29,15 @@
   </div>
 
   <div class="form-group mb-3">
-    <label for="telefononuevo">Ingrese el nuevo numero de telefono </label>
+    <label for="nuevoTelefono">Ingrese el nuevo numero de telefono </label>
     <input
     class="form-control"
-    id="telefononuevo"
-    formControlName="telefononuevo"
-    [ngClass]="{'is-invalid': TelefonoNuevo?.errors && TelefonoNuevo?.touched, 'is-valid' : !TelefonoNuevo?.errors && TelefonoNuevo?.touched}"
+    id="nuevoTelefono"
+    formControlName="nuevoTelefono"
+    [ngClass]="{'is-invalid': NuevoTelefono?.errors && NuevoTelefono?.touched, 'is-valid' : !NuevoTelefono?.errors && NuevoTelefono?.touched}"
     >
-    <div *ngIf="TelefonoNuevo?.errors && TelefonoNuevo?.touched">
-      <p *ngIf="TelefonoNuevo?.hasError('required')" class="text-danger">
+    <div *ngIf="NuevoTelefono?.errors && NuevoTelefono?.touched">
+      <p *ngIf="NuevoTelefono?.hasError('required')" class="text-danger">
         Ingrese el nuevo numero de telefono
       </p>
     </div>
