--- a/src/app/components/xp/xp.component.html
+++ b/src/app/components/xp/xp.component.html
@@ -7,6 +7,12 @@
     <div class="card mat-card" *ngIf="mostrarAniadirXp">
       <app-xperience></app-xperience>
     </div>
+    <div class="btn-edit" (click)="mostrarBorrarXp= !mostrarBorrarXp">
+      <i class="fa fa-trash"></i>
+    </div>
+    <div class="card mat-card" *ngIf="mostrarBorrarXp">
+      <app-borrarproye></app-borrarproye>
+    </div>
   </div>
   <ul class="items-list">
     <li *ngFor="let xp of xpList">
