Arreglo mail update

--- a/src/app/components/xp/xp.component.html
+++ b/src/app/components/xp/xp.component.html
@@ -11,7 +11,7 @@
       <i class="fa fa-trash"></i>
     </div>
     <div class="card mat-card" *ngIf="mostrarBorrarXp">
-      <app-borrarproye></app-borrarproye>
+      <app-borrarxp></app-borrarxp>
     </div>
   </div>
   <ul class="items-list">
