--- a/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
+++ b/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
@@ -14,15 +14,15 @@
   </div>
 
   <div class="form-group mb-3">
-    <label for="mailnuevo">Ingrese el nuevo mail de contacto </label>
+    <label for="nuevoMail">Ingrese el nuevo mail de contacto </label>
     <input
     class="form-control"
-    id="mailnuevo"
-    formControlName="mailnuevo"
-    [ngClass]="{'is-invalid': MailNuevo?.errors && MailNuevo?.touched, 'is-valid' : !MailNuevo?.errors && MailNuevo?.touched}"
+    id="nuevoMail"
+    formControlName="nuevoMail"
+    [ngClass]="{'is-invalid': NuevoMail?.errors && NuevoMail?.touched, 'is-valid' : !NuevoMail?.errors && NuevoMail?.touched}"
     >
-    <div *ngIf="MailNuevo?.errors && MailNuevo?.touched">
-      <p *ngIf="MailNuevo?.hasError('required')" class="text-danger">
+    <div *ngIf="NuevoMail?.errors && NuevoMail?.touched">
+      <p *ngIf="NuevoMail?.hasError('required')" class="text-danger">
         Ingrese el mail nuevo
       </p>
     </div>
