--- a/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
+++ b/src/app/components/editar/editar-infocontacto/editar-infocontacto.component.html
@@ -14,11 +14,11 @@
   </div>
 
   <div class="form-group mb-3">
-    <label for="nuevoMail">Ingrese el nuevo mail de contacto </label>
+    <label for="nuevomail">Ingrese el nuevo mail de contacto </label>
     <input
     class="form-control"
-    id="nuevoMail"
-    formControlName="nuevoMail"
+    id="nuevomail"
+    formControlName="nuevomail"
     [ngClass]="{'is-invalid': NuevoMail?.errors && NuevoMail?.touched, 'is-valid' : !NuevoMail?.errors && NuevoMail?.touched}"
     >
     <div *ngIf="NuevoMail?.errors && NuevoMail?.touched">
