--- a/src/app/components/certifications/certifications.component.html
+++ b/src/app/components/certifications/certifications.component.html
@@ -2,11 +2,13 @@
   <div id="certifications">
     <div class="card-titles">
       <h2>Certificaciones</h2>
-      <div class="btn-edit" (click)="mostrarAniadirCert = !mostrarAniadirCert">
-        <i class="fa fa-plus"></i>
-      </div>
-      <div class="card mat-card" *ngIf="mostrarAniadirCert">
-        <app-certificados></app-certificados>
+      <div *ngIf="userloged">
+        <div class="btn-edit" (click)="mostrarAniadirCert = !mostrarAniadirCert">
+          <i class="fa fa-plus"></i>
+        </div>
+        <div class="card mat-card" *ngIf="mostrarAniadirCert">
+          <app-certificados></app-certificados>
+        </div>
       </div>
     </div>
   </div>
