--- a/src/app/components/hardnsoft/hardnsoft.component.html
+++ b/src/app/components/hardnsoft/hardnsoft.component.html
@@ -1,17 +1,19 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Hard & Soft Skills</h2>
-    <div class="btn-edit" (click)="mostrarAniadirHNS = !mostrarAniadirHNS">
-      <i class="fa fa-plus"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarAniadirHNS">
-      <app-hnsskills></app-hnsskills>
-    </div>
-    <div class="btn-edit" (click)="mostrarBorrar = !mostrarBorrar">
-      <i class="fa fa-trash"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarBorrar">
-      <app-borrarhns></app-borrarhns>
+    <div *ngIf="userloged">
+      <div class="btn-edit" (click)="mostrarAniadirHNS = !mostrarAniadirHNS">
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarAniadirHNS">
+        <app-hnsskills></app-hnsskills>
+      </div>
+      <div class="btn-edit" (click)="mostrarBorrar = !mostrarBorrar">
+        <i class="fa fa-trash"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarBorrar">
+        <app-borrarhns></app-borrarhns>
+      </div>
     </div>
     <ul class="items-list">
       <li *ngFor="let hns of hardnsoftList">
