--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,17 +1,19 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Proyectos</h2>
-    <div class="btn-edit" (click)="mostrarAniadirProyecto = !mostrarAniadirProyecto">
-      <i class="fa fa-plus"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarAniadirProyecto">
-      <app-proyecto></app-proyecto>
-    </div>
-    <div class="btn-edit" (click)="mostrarBorrarProyecto = !mostrarBorrarProyecto">
-      <i class="fa fa-trash"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarBorrarProyecto">
-      <app-borrarproye></app-borrarproye>
+    <div *ngIf="userloged">
+      <div class="btn-edit" (click)="mostrarAniadirProyecto = !mostrarAniadirProyecto">
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarAniadirProyecto">
+        <app-proyecto></app-proyecto>
+      </div>
+      <div class="btn-edit" (click)="mostrarBorrarProyecto = !mostrarBorrarProyecto">
+        <i class="fa fa-trash"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarBorrarProyecto">
+        <app-borrarproye></app-borrarproye>
+      </div>
     </div>
   </div>
   <ul class="items-list">
