--- a/src/app/components/xp/xp.component.html
+++ b/src/app/components/xp/xp.component.html
@@ -1,18 +1,19 @@
 <div class="card mat-card">
   <div class="card-titles">
     <h2>Experiencia</h2>
-  <div class="btn-edit" (click)="mostrarAniadirXp = !mostrarAniadirXp">
-      <i class="fa fa-plus"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarAniadirXp">
-      <app-xperience></app-xperience>
-    </div>
-    <div class="btn-edit" (click)="mostrarBorrarXp= !mostrarBorrarXp">
-      <i class="fa fa-trash"></i>
-    </div>
-    <div class="card mat-card" *ngIf="mostrarBorrarXp">
-      <app-borrarxp></app-borrarxp>
-    </div>
+    <div *ngIf="userloged">
+      <div class="btn-edit" (click)="mostrarAniadirXp = !mostrarAniadirXp">
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarAniadirXp">
+        <app-xperience></app-xperience>
+      </div>
+      <div class="btn-edit" (click)="mostrarBorrarXp= !mostrarBorrarXp">
+        <i class="fa fa-trash"></i>
+      </div>
+      <div class="card mat-card" *ngIf="mostrarBorrarXp">
+        <app-borrarxp></app-borrarxp>
+      </div>
   </div>
   <ul class="items-list">
     <li *ngFor="let xp of xpList">
